# 3D_Engine

./: .gitignore  CMakeLists.txt  README.md
src/engine/: game_engine.hpp
src/helpers/architecture/: ecs_class.hpp
src/helpers/logic/: logic_presets.hpp
src/rendering/graphics/: vertices_class.hpp
src/rendering/graphics/geometry/: vertices_class.hpp
src/rendering/graphics/shaders/: shader_class.hpp
src/rendering/graphics/shaders/glsl_files/: fragment_shader.glsl  vertex_shader.glsl
src/rendering/graphics/textures/: texture_handler.hpp
src/rendering/objects/: object_lib.hpp  object_mover.hpp
src/rendering/objects/creation/: object_lib.hpp
src/rendering/objects/management/: object_manager.hpp
src/rendering/objects/modifying/: object_interface.hpp
src/rendering/screen/: screen_class.hpp
src/rendering/screen/camera/: camera_handler.hpp  player_camera_controller.hpp
src/rendering/screen/input/: keybind_handler.hpp  movement_handler.hpp  movement_listener.hpp
testing/: main.cpp
